do not hide TOC button on hover, fix unintended behavior
* fix able to interact with button when invisible

--- a/src/styles/components/TableOfContents.module.scss
+++ b/src/styles/components/TableOfContents.module.scss
@@ -22,7 +22,7 @@
         backdrop-filter: blur(5px);
         border: 1px solid var(--primary100);
         border-radius: calc(var(--border-radius) * 1.5);
-        padding: 1.5rem .5em;
+        padding: 1.5rem .5rem;
         box-shadow: var(--box-shadow-sm);
         transition: var(--transition);
         cursor: pointer;
